Arreglo de logos Alien

--- a/Index1.html
+++ b/Index1.html
@@ -11,21 +11,21 @@
 
         <header>
             <div class="image-container" id="logo">
-                <img src="Imagenes Frank/Imagenes HTML/Logo Fatu.jpg" alt="logo"/>
+                <img src="./Imagenes pagina web fatube/Logo Fatu.jpg" alt="logo"/>
             </div>
         </header>
 
         <section id="hero">
 
             <div class="image-container" id="piramide">
-                <img src="Imagenes Frank/Imagenes HTML/fondo piramide.jpg" 
+                <img src="./Imagenes pagina web fatube/fondo piramide.jpg" 
                 alt="piramide"/>
             </div>
 
             <div class="informacion-contenedor">
 
                 <div class="image-container" id="foto">
-                    <img src="Imagenes Frank/Imagenes HTML/yoformal.jpg" alt="foto perfil" >      
+                    <img src="./Imagenes pagina web fatube/yoformal.jpg" alt="foto perfil" >      
                 </div>
 
                 <div class="informacion">
@@ -50,31 +50,31 @@
 
                 <li>
                     <a href="#" target="_blank" class="social-icon" id="linkedIn">
-                        <img src="Imagenes Frank/Imagenes HTML/linkedin.png" alt="linkedin">
+                        <img src="./Imagenes pagina web fatube/linkedin.png" alt="linkedin">
                      </a>
                  </li>
 
                  <li>
                     <a href="https://github.com/Ftuberquia" target="_blank" class="social-icon" id="Github">
-                        <img src="Imagenes Frank/Imagenes HTML/logo github.png" alt="Github">
+                        <img src="./Imagenes pagina web fatube/logo github.png" alt="Github">
                      </a>
                  </li>
 
                  <li>
                     <a href="https://platzi.com/p/frank.tuberquiarojas" target="_blank" class="social-icon" id="Platzi">
-                        <img src="Imagenes Frank/Imagenes HTML/logo plarzi.webp" alt="Platzi">
+                        <img src="./Imagenes pagina web fatube/logo plarzi.webp" alt="Platzi">
                      </a>
                  </li>
 
                  <li>
                     <a href="https://app.slack.com/client/T013Z1B5U3X/browse-channels/rimeto_profile/U04K9E72206?cdn_fallback=1" target="_blank" class="social-icon" id="Slack">
-                        <img src="Imagenes Frank/Imagenes HTML/logo slack.jpg" alt="Slack">
+                        <img src="./Imagenes pagina web fatube/logo slack.jpg" alt="Slack">
                      </a>
                  </li>
                  
                  <li>
                     <a href="#" class="social-icon" id="Henry">
-                        <img src="Imagenes Frank/Imagenes HTML/logo henry.jpg" alt="Henry">
+                        <img src="./Imagenes pagina web fatube/logo henry.jpg" alt="Henry">
                      </a>
                  </li>
 
